k8s-manifest/apps/user-service/user-service-deployment-new.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  labels:
    app: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: akjamie/bookstore-user-service:latest
          imagePullPolicy: Always
          args: ["--spring.profiles.active=$(ENV)"]
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: 420Mi
          readinessProbe:
            httpGet:
              port: 8080
              path: /user-service/actuator/health
            failureThreshold: 5
            successThreshold: 3
            initialDelaySeconds: 90
            periodSeconds: 10
          volumeMounts:
            - name: conf
              mountPath: /etc/keystore
              subPath: rsa.key
      volumes:
        - name: jwt-rsa-keystore
          secret:
            secretName: jwt-rsa-keystore
            items:
              - key: rsa.key
                path: rsa.key
        - name: conf
          emptyDir: {}
