k8s-manifest/apps/user-service/user-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  labels:
    app: user-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: akjamie/bookstore-user-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: 420Mi
          readinessProbe:
            httpGet:
              port: 8080
              path: /user-service/actuator/health
            failureThreshold: 5
            successThreshold: 3
            initialDelaySeconds: 90
            periodSeconds: 10
          volumeMounts:
            - mountPath: "/etc/keystore"
              name: jwt-rsa-keystore
              readOnly: true
      volumes:
        - name: jwt-rsa-keystore
          secret:
            secretName: jwt-rsa
            items:
              - key: rsa.key
                path: rsa.key
