k8s-manifest/apps/user-service/user-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: user-service
  name: user-service
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: user-service
  type: ClusterIP
