k8s-manifest/apps/user-service/user-service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-service-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /user-service/$1
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
    - host: gw.it-meta.space
      http:
        paths:
          - path: /user-service/(.+)
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 8080
  tls:
    - secretName: gw-tls
      hosts:
        - gw.it-meta.space
